cmake_minimum_required(VERSION 2.8)
PROJECT(RCCV)

list(APPEND CMAKE_CXX_FLAGS
-pthread)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")

set(CMAKE_CXX_STANDARD 11)
LINK_LIBRARIES("/home/gohu3/JH_driver/ubuntu_x64/JHCap2/libJHCap.so")

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

set(PROJ_SOURCES
main.cpp
ThreadControl.cpp
JHCamera.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJ_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})